Remove sky for testing

--- a/index.html
+++ b/index.html
@@ -122,20 +122,20 @@
 
         // Create sky
 				scene.background = new THREE.Color( 0x944dff );
-        var sky = new THREE.Sky();
-				sky.scale.setScalar( 10000 );
-				scene.add( sky );
-				var uniforms = sky.material.uniforms;
-				uniforms.turbidity.value = 10;
-				uniforms.rayleigh.value = 2;
-				uniforms.luminance.value = 10;
-				uniforms.mieCoefficient.value = 0.005;
-				uniforms.mieDirectionalG.value = 0.8;
-				var parameters = {
-					distance: 400,
-					inclination: 0.49,
-					azimuth: 0.205
-				};
+        // var sky = new THREE.Sky();
+				// sky.scale.setScalar( 10000 );
+				// scene.add( sky );
+				// var uniforms = sky.material.uniforms;
+				// uniforms.turbidity.value = 10;
+				// uniforms.rayleigh.value = 2;
+				// uniforms.luminance.value = 10;
+				// uniforms.mieCoefficient.value = 0.005;
+				// uniforms.mieDirectionalG.value = 0.8;
+				// var parameters = {
+				// 	distance: 400,
+				// 	inclination: 0.49,
+				// 	azimuth: 0.205
+				// };
 
 
 
