--- a/index.html
+++ b/index.html
@@ -117,29 +117,42 @@
 			animate();
 
 			function init() {
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 1000 );
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 4200 );
 				scene = new THREE.Scene();
 
-        // Create sky
+        // Create sky using sky module
 				// scene.background = new THREE.Color( 0x944dff );
-        var sky = new THREE.Sky();
-				sky.scale.setScalar( 10000 );
-				scene.add( sky );
-				var uniforms = sky.material.uniforms;
-				uniforms.turbidity.value = 10;
-				uniforms.rayleigh.value = 2;
-				uniforms.luminance.value = 10;
-				uniforms.mieCoefficient.value = 0.005;
-				uniforms.mieDirectionalG.value = 0.8;
-				var parameters = {
-					distance: 400,
-					inclination: 0.49,
-					azimuth: 0.205
-				};
+        // var sky = new THREE.Sky();
+				// sky.scale.setScalar( 10000 );
+				// scene.add( sky );
+				// var uniforms = sky.material.uniforms;
+				// uniforms.turbidity.value = 10;
+				// uniforms.rayleigh.value = 2;
+				// uniforms.luminance.value = 10;
+				// uniforms.mieCoefficient.value = 0.005;
+				// uniforms.mieDirectionalG.value = 0.8;
+
+				// Create traditional skybox
+				var materialArray = [];
+				materialArray.push(new THREE.MeshBasicMaterial( { map: new THREE.TextureLoader().load('./textures/Custom_skybox/side1.png') }));
+				materialArray.push(new THREE.MeshBasicMaterial( { map: new THREE.TextureLoader().load('./textures/Custom_skybox/side2.png' ) }));
+				materialArray.push(new THREE.MeshBasicMaterial( { map: new THREE.TextureLoader().load('./textures/Custom_skybox/ceil.png' ) }));
+				materialArray.push(new THREE.MeshBasicMaterial( { map: new THREE.TextureLoader().load('./textures/Custom_skybox/floor.png' ) }));
+				materialArray.push(new THREE.MeshBasicMaterial( { map: new THREE.TextureLoader().load('./textures/Custom_skybox/side3.png' ) }));
+				materialArray.push(new THREE.MeshBasicMaterial( { map: new THREE.TextureLoader().load('./textures/Custom_skybox/side4.png' ) }));
+				for (var i = 0; i < 6; i++) {
+					materialArray[i].side = THREE.BackSide;
+				}
+				// var skyboxMaterial = new THREE.MeshFaceMaterial( materialArray );
+				var skyboxGeom = new THREE.CubeGeometry( 3000, 3000, 3000, 1, 1, 1 );
+				var skybox = new THREE.Mesh( skyboxGeom, materialArray );
+				skybox.position.z = -1000;
+				skybox.position.y = -10;
+				scene.add( skybox );
 
 
 
-				scene.fog = new THREE.Fog( 0x000000, 0, 750 );
+				scene.fog = new THREE.Fog( 0xffffff, 0, 1600 );
 
         // Add light
 				var light = new THREE.HemisphereLight( 0xeeeeff, 0x777788, 0.75 );
@@ -163,7 +176,7 @@
   					{
   						textureWidth: 512,
   						textureHeight: 512,
-  						waterNormals: new THREE.TextureLoader().load( './textures/Water_001_NORM.jpg', function ( texture ) {
+  						waterNormals: new THREE.TextureLoader().load( './textures/Crystal_003_NORM.jpg', function ( texture ) {
   							texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
   						}),
   						alpha: 1.0,
@@ -231,46 +244,31 @@
 				// boxes
 				var boxGeometry = new THREE.BoxBufferGeometry( 20, 20, 20 );
 
-
-        // Old Color scheme
-				// boxGeometry = boxGeometry.toNonIndexed(); // ensure each face has unique vertices
-				// count = boxGeometry.attributes.position.count;
-				// colors = [];
-				// for ( var i = 0; i < count; i ++ ) {
-				// 	color.setHSL( Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75 );
-				// 	colors.push( color.r, color.g, color.b );
-				// }
-				// boxGeometry.addAttribute( 'color', new THREE.Float32BufferAttribute( colors, 3 ) );
-
-
-
-
-
         // Array of box positions
         var boxPositions = [
 
           // Only sets initial stair jump platforms
-          [20, 10, -180],
-          [20, -10, -180],
-          [20, 10, -200],
-          [20, -10, -200],
+          [20, 10, -280],
+          [20, -10, -280],
+          [20, 10, -300],
+          [20, -10, -300],
 
-          [40, 10, -240],
-          [40, -10, -240],
-          [40, 10, -260],
-          [40, -10, -260],
+          [40, 10, -340],
+          [40, -10, -340],
+          [40, 10, -360],
+          [40, -10, -360],
 
-          [60, 10, -300],
-          [60, -10, -300],
-          [60, 10, -320],
-          [60, -10, -320]
+          [60, 10, -400],
+          [60, -10, -400],
+          [60, 10, -420],
+          [60, -10, -420]
         ]
 
         function addToBoxPos(boxPos) {
 
           // Center platform
           for (var x = -70; x <= 70; x += 20) {
-            for (var z = -360; z >= -500; z -= 20) {
+            for (var z = -460; z >= -600; z -= 20) {
               boxPos.push([80, x, z]);
             }
           }
