--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 				overflow: hidden;
 				font-family: arial;
 			}
-			#blocker {
+			#start-screen {
 				position: absolute;
 				width: 100%;
 				height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-direction: column;
 				background-color: rgba(0,0,0,0.5);
 			}
 			#instructions {
-				width: 100%;
-				height: 100%;
+				/* width: 100%;
+				height: 100%; */
 				display: -webkit-box;
 				display: -moz-box;
 				display: box;
@@ -39,6 +43,7 @@
 				color: #ffffff;
 				text-align: center;
 				cursor: pointer;
+				margin: 50px;
 			}
 		</style>
 	</head>
@@ -48,13 +53,20 @@
 		<script src="./modules/Water.js"></script>
 		<script src="./modules/Sky.js"></script>
 
-		<div id="blocker">
+		<div id="directions">
+
+		</div>
+
+		<div id="start-screen">
 
 			<div id="instructions">
-				<span style="font-size:40px">Click to play</span>
-				<br />
-				(W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
+				<span style="font-size:40px">Click Here to Start</span>
 			</div>
+
+			<audio controls loop autoplay>
+	  		<source src="./audio/the_float_edit2.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
+			</audio>
 
 		</div>
 
@@ -63,7 +75,8 @@
       var water;
 			var objects = [];
 			var raycaster;
-			var blocker = document.getElementById( 'blocker' );
+			var sphere;
+			var startScreen = document.getElementById( 'start-screen' );
 			var instructions = document.getElementById( 'instructions' );
 			var havePointerLock = 'pointerLockElement' in document || 'mozPointerLockElement' in document || 'webkitPointerLockElement' in document;
 
@@ -74,10 +87,10 @@
 					if ( document.pointerLockElement === element || document.mozPointerLockElement === element || document.webkitPointerLockElement === element ) {
 						controlsEnabled = true;
 						controls.enabled = true;
-						blocker.style.display = 'none';
+						startScreen.style.display = 'none';
 					} else {
 						controls.enabled = false;
-						blocker.style.display = 'block';
+						startScreen.style.display = 'flex';
 						instructions.style.display = '';
 					}
 				};
@@ -368,13 +381,13 @@
 
 
 
-				// Add CIRCLE OF POWER
+				// Add SPHERE OF POWER
 				var sphereGeometry = new THREE.SphereBufferGeometry( 200, 32, 32 );
 				var sphereMaterial = new THREE.MeshPhysicalMaterial( {
 					map: marbleTexture,
 					color: 0xffe6ff
 				});
-				var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
+				sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
 				sphere.position.y = 600;
 				sphere.position.x = 0;
 				sphere.position.z = -640;
@@ -433,6 +446,14 @@
 				}
         render();
 			}
+
+			function sphereLoop () {
+				sphere.rotation.y += 0.001;
+
+				requestAnimationFrame(sphereLoop);
+			}
+
+			sphereLoop();
 
       function render () {
 
