--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<title>3JS Playground</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
+
 		<style>
 			html, body {
 				width: 100%;
@@ -23,11 +27,22 @@
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
-				background-color: rgba(0,0,0,0.5);
+				background-color: rgba(0,0,0,0.3);
 			}
-			#instructions {
+			#title {
+				color: white;
+				font-size: 200px;
+				font-family: 'Raleway Dots', cursive;
+				text-shadow: 0px 0px 5px black;
+				margin: 0;
+			}
+			#start-button {
 				/* width: 100%;
 				height: 100%; */
+				font-size: 40px;
+				font-weight: 300;
+				font-family: 'Raleway', sans-serif;
+				text-shadow: 0px 0px 5px black;
 				display: -webkit-box;
 				display: -moz-box;
 				display: box;
@@ -45,6 +60,20 @@
 				cursor: pointer;
 				margin: 50px;
 			}
+			#directions {
+				position: absolute;
+				background-color: transparent;
+				display: none;
+				flex-direction: column;
+				color: white;
+				font-size: 17px;
+				font-weight: 300;
+				font-family: 'Raleway', sans-serif;
+				text-shadow: 0px 0px 5px black;
+			}
+			#directions p {
+				margin: 5px;
+			}
 		</style>
 	</head>
 	<body>
@@ -54,13 +83,22 @@
 		<script src="./modules/Sky.js"></script>
 
 		<div id="directions">
-
+			<p>KEY MAP:</p>
+			<p>ESC: Exit / get mouse back / music controls</p>
+			<p>MOUSE: Look around / turn</p>
+			<p>W or UP: Move forward</p>
+			<p>S or DOWN: Move backward</p>
+			<p>A or LEFT: Strafe left</p>
+			<p>D or RIGHT: Strafe right</p>
+			<p>SPACE: Jump</p>
 		</div>
 
 		<div id="start-screen">
 
-			<div id="instructions">
-				<span style="font-size:40px">Click Here to Start</span>
+			<p id=title>ONE OPEN</p>
+
+			<div id="start-button">
+				<span>Click Here to Start</span>
 			</div>
 
 			<audio controls loop autoplay>
@@ -76,8 +114,9 @@
 			var objects = [];
 			var raycaster;
 			var sphere;
+			var directions = document.getElementById( 'directions' );
 			var startScreen = document.getElementById( 'start-screen' );
-			var instructions = document.getElementById( 'instructions' );
+			var startButton = document.getElementById( 'start-button' );
 			var havePointerLock = 'pointerLockElement' in document || 'mozPointerLockElement' in document || 'webkitPointerLockElement' in document;
 
 			// Use logic from Three.js repo for browser pointer-lock
@@ -88,14 +127,16 @@
 						controlsEnabled = true;
 						controls.enabled = true;
 						startScreen.style.display = 'none';
+						directions.style.display = 'flex';
 					} else {
 						controls.enabled = false;
 						startScreen.style.display = 'flex';
-						instructions.style.display = '';
+						startButton.style.display = '';
+						directions.style.display = 'none';
 					}
 				};
 				var pointerlockerror = function ( event ) {
-					instructions.style.display = '';
+					startButton.style.display = '';
 				};
 				// Hook pointer lock state change events
 				document.addEventListener( 'pointerlockchange', pointerlockchange, false );
@@ -104,14 +145,14 @@
 				document.addEventListener( 'pointerlockerror', pointerlockerror, false );
 				document.addEventListener( 'mozpointerlockerror', pointerlockerror, false );
 				document.addEventListener( 'webkitpointerlockerror', pointerlockerror, false );
-				instructions.addEventListener( 'click', function ( event ) {
-					instructions.style.display = 'none';
+				startButton.addEventListener( 'click', function ( event ) {
+					startButton.style.display = 'none';
 					// Ask the browser to lock the pointer
 					element.requestPointerLock = element.requestPointerLock || element.mozRequestPointerLock || element.webkitRequestPointerLock;
 					element.requestPointerLock();
 				}, false );
 			} else {
-				instructions.innerHTML = 'Your browser doesn\'t seem to support Pointer Lock API';
+				startButton.innerHTML = 'Your browser doesn\'t seem to support Pointer Lock API';
 			}
 
 			var controlsEnabled = false;
