Add double jump directions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="./modules/Sky.js"></script>
 
 		<div id="directions">
-			<p>KEY MAP:</p>
+			<p id="key-map-title">KEY MAP:</p>
 			<p>ESC: Exit / get mouse back / music controls</p>
 			<p>MOUSE: Look around / turn</p>
 			<p>W or UP: Move forward</p>
@@ -27,6 +27,8 @@
 			<p>A or LEFT: Strafe left</p>
 			<p>D or RIGHT: Strafe right</p>
 			<p>SPACE: Jump</p>
+			<p id="double-jump">(You can double jump once you've</p>
+			<p>reached the central platform)</p>
 		</div>
 
 		<div id="start-screen">
