Make directions clearer

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 		<script src="./modules/Sky.js"></script>
 
 		<div id="directions">
-			<p id="key-map-title">KEY MAP:</p>
-			<p>ESC: Exit / get mouse back / music controls</p>
-			<p>MOUSE: Look around / turn</p>
-			<p>W or UP: Move forward</p>
-			<p>S or DOWN: Move backward</p>
-			<p>A or LEFT: Strafe left</p>
-			<p>D or RIGHT: Strafe right</p>
-			<p>SPACE: Jump</p>
-			<p id="double-jump">(You can double jump once you've</p>
+			<p id="key-map-title">Key Map:</p>
+			<p>ESC:&nbsp exit / get mouse back / music controls</p>
+			<p>MOUSE:&nbsp look around / turn</p>
+			<p>W or UP:&nbsp move forward</p>
+			<p>S or DOWN:&nbsp move backward</p>
+			<p>A or LEFT:&nbsp strafe left</p>
+			<p>D or RIGHT:&nbsp strafe right</p>
+			<p>SPACE:&nbsp jump</p>
+			<p id="double-jump">(you can double jump once you've</p>
 			<p>reached the central platform)</p>
 		</div>
 
