Add directions to start screen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div id="directions">
 			<p id="key-map-title">Key Map:</p>
-			<p>ESC:&nbsp exit / get mouse back / music controls</p>
+			<p>ESC:&nbsp exit / get mouse back / sound controls</p>
 			<p>MOUSE:&nbsp look around / turn</p>
 			<p>W or UP:&nbsp move forward</p>
 			<p>S or DOWN:&nbsp move backward</p>
@@ -35,12 +35,22 @@
 
 			<p id=title>ONE OPEN</p>
 
-			<p id="start-button">Click Here to Start</p>
+			<p id="initial-directions">
+				Use your left hand for the A, W, S, D, and spacebar keys to move and jump. Use your right hand for the mouse to turn and look around.
+				<br>
+				<br>
+				You can double jump once you've reached the central platform.
+				<br>
+				<br>
+				If the soundscape doesn't autoplay in your browser, you can use the controls below to play it while you explore.
+			</p>
 
 			<audio controls loop autoplay>
 	  		<source src="./audio/the_float_edit2.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
 			</audio>
+
+			<p id="start-button">Click Here to Start</p>
 
 		</div>
 
