--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<script src="./libraries/three.min.js"></script>
 		<script src="./modules/PointerLockControls.js"></script>
 		<script src="./modules/Water.js"></script>
-		<script src="./modules/Sky.js"></script>
+		<!-- <script src="./modules/Sky.js"></script>
+		<script src="./modules/TGALoader.js"></script> -->
 
 		<div id="directions">
 			<p id="key-map-title">Key Map:</p>
