Revert from commit f965d39b1de7ad9a86b4b5f31ac734ee4839b882 to commit fc2d0c36462ff74313047e84dc8a2947bfadc174, leaving the HEAD at 678fb6b031222fa2206e4d75d4ae33d512f82a59

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		<script src="./libraries/three.min.js"></script>
 		<script src="./modules/PointerLockControls.js"></script>
 		<script src="./modules/Water.js"></script>
-		<!-- <script src="./modules/Sky.js"></script>
-		<script src="./modules/TGALoader.js"></script> -->
+		<script src="./modules/Sky.js"></script>
 
 		<div id="directions">
 			<p id="key-map-title">Key Map:</p>
